使用 Colaboratory 创建

--- a/assignment-1.ipynb
+++ b/assignment-1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOql7ur3m24tbWZtZu7x6Rg",
+      "authorship_tag": "ABX9TyMZ+e4UiJwcKng+moTpGks5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,23 +28,71 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "7vgGYzsiFZyE",
-        "outputId": "bce66f15-29e1-46ee-e770-3ab9267570cd"
+        "outputId": "03d42560-6cca-4e89-a56e-efb78b3d67b3"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Requirement already satisfied: pyspark in /usr/local/lib/python3.10/dist-packages (3.4.1)\n",
+            "Collecting pyspark\n",
+            "  Downloading pyspark-3.4.1.tar.gz (310.8 MB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m310.8/310.8 MB\u001b[0m \u001b[31m2.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
             "Requirement already satisfied: py4j==0.10.9.7 in /usr/local/lib/python3.10/dist-packages (from pyspark) (0.10.9.7)\n",
-            "openjdk-8-jdk-headless is already the newest version (8u372-ga~us1-0ubuntu1~20.04).\n",
-            "0 upgraded, 0 newly installed, 0 to remove and 15 not upgraded.\n"
+            "Building wheels for collected packages: pyspark\n",
+            "  Building wheel for pyspark (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Created wheel for pyspark: filename=pyspark-3.4.1-py2.py3-none-any.whl size=311285398 sha256=73a5c5b4a30fab4bcf5ebb4b674fdf7e7fbf25cca09daa3bfd8ba76e1c3ed6bd\n",
+            "  Stored in directory: /root/.cache/pip/wheels/0d/77/a3/ff2f74cc9ab41f8f594dabf0579c2a7c6de920d584206e0834\n",
+            "Successfully built pyspark\n",
+            "Installing collected packages: pyspark\n",
+            "Successfully installed pyspark-3.4.1\n",
+            "The following additional packages will be installed:\n",
+            "  libxtst6 openjdk-8-jre-headless\n",
+            "Suggested packages:\n",
+            "  openjdk-8-demo openjdk-8-source libnss-mdns fonts-dejavu-extra\n",
+            "  fonts-ipafont-gothic fonts-ipafont-mincho fonts-wqy-microhei\n",
+            "  fonts-wqy-zenhei fonts-indic\n",
+            "The following NEW packages will be installed:\n",
+            "  libxtst6 openjdk-8-jdk-headless openjdk-8-jre-headless\n",
+            "0 upgraded, 3 newly installed, 0 to remove and 15 not upgraded.\n",
+            "Need to get 36.5 MB of archives.\n",
+            "After this operation, 144 MB of additional disk space will be used.\n",
+            "Selecting previously unselected package libxtst6:amd64.\n",
+            "(Reading database ... 123069 files and directories currently installed.)\n",
+            "Preparing to unpack .../libxtst6_2%3a1.2.3-1_amd64.deb ...\n",
+            "Unpacking libxtst6:amd64 (2:1.2.3-1) ...\n",
+            "Selecting previously unselected package openjdk-8-jre-headless:amd64.\n",
+            "Preparing to unpack .../openjdk-8-jre-headless_8u372-ga~us1-0ubuntu1~20.04_amd64.deb ...\n",
+            "Unpacking openjdk-8-jre-headless:amd64 (8u372-ga~us1-0ubuntu1~20.04) ...\n",
+            "Selecting previously unselected package openjdk-8-jdk-headless:amd64.\n",
+            "Preparing to unpack .../openjdk-8-jdk-headless_8u372-ga~us1-0ubuntu1~20.04_amd64.deb ...\n",
+            "Unpacking openjdk-8-jdk-headless:amd64 (8u372-ga~us1-0ubuntu1~20.04) ...\n",
+            "Setting up libxtst6:amd64 (2:1.2.3-1) ...\n",
+            "Setting up openjdk-8-jre-headless:amd64 (8u372-ga~us1-0ubuntu1~20.04) ...\n",
+            "update-alternatives: using /usr/lib/jvm/java-8-openjdk-amd64/jre/bin/orbd to provide /usr/bin/orbd (orbd) in auto mode\n",
+            "update-alternatives: using /usr/lib/jvm/java-8-openjdk-amd64/jre/bin/servertool to provide /usr/bin/servertool (servertool) in auto mode\n",
+            "update-alternatives: using /usr/lib/jvm/java-8-openjdk-amd64/jre/bin/tnameserv to provide /usr/bin/tnameserv (tnameserv) in auto mode\n",
+            "Setting up openjdk-8-jdk-headless:amd64 (8u372-ga~us1-0ubuntu1~20.04) ...\n",
+            "update-alternatives: using /usr/lib/jvm/java-8-openjdk-amd64/bin/idlj to provide /usr/bin/idlj (idlj) in auto mode\n",
+            "update-alternatives: using /usr/lib/jvm/java-8-openjdk-amd64/bin/wsimport to provide /usr/bin/wsimport (wsimport) in auto mode\n",
+            "update-alternatives: using /usr/lib/jvm/java-8-openjdk-amd64/bin/jsadebugd to provide /usr/bin/jsadebugd (jsadebugd) in auto mode\n",
+            "update-alternatives: using /usr/lib/jvm/java-8-openjdk-amd64/bin/native2ascii to provide /usr/bin/native2ascii (native2ascii) in auto mode\n",
+            "update-alternatives: using /usr/lib/jvm/java-8-openjdk-amd64/bin/javah to provide /usr/bin/javah (javah) in auto mode\n",
+            "update-alternatives: using /usr/lib/jvm/java-8-openjdk-amd64/bin/clhsdb to provide /usr/bin/clhsdb (clhsdb) in auto mode\n",
+            "update-alternatives: using /usr/lib/jvm/java-8-openjdk-amd64/bin/jhat to provide /usr/bin/jhat (jhat) in auto mode\n",
+            "update-alternatives: using /usr/lib/jvm/java-8-openjdk-amd64/bin/extcheck to provide /usr/bin/extcheck (extcheck) in auto mode\n",
+            "update-alternatives: using /usr/lib/jvm/java-8-openjdk-amd64/bin/hsdb to provide /usr/bin/hsdb (hsdb) in auto mode\n",
+            "update-alternatives: using /usr/lib/jvm/java-8-openjdk-amd64/bin/schemagen to provide /usr/bin/schemagen (schemagen) in auto mode\n",
+            "update-alternatives: using /usr/lib/jvm/java-8-openjdk-amd64/bin/xjc to provide /usr/bin/xjc (xjc) in auto mode\n",
+            "update-alternatives: using /usr/lib/jvm/java-8-openjdk-amd64/bin/wsgen to provide /usr/bin/wsgen (wsgen) in auto mode\n",
+            "Processing triggers for libc-bin (2.31-0ubuntu9.9) ...\n"
           ]
         }
       ],
@@ -66,7 +114,7 @@
       "metadata": {
         "id": "nS9UM1hoFizF"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -81,24 +129,24 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AcIZ1cyMJPs0",
-        "outputId": "2455b605-7c66-415b-9e62-874e27fe152f"
+        "outputId": "ab7191a9-6aeb-483a-b567-f03632715cd1"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2023-07-02 13:03:45--  https://raw.githubusercontent.com/ZwL6/MZT/main/cities.json\n",
+            "--2023-07-02 16:52:51--  https://raw.githubusercontent.com/ZwL6/MZT/main/cities.json\n",
             "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
             "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 15829 (15K) [text/plain]\n",
-            "Saving to: ‘cities.json.1’\n",
+            "Saving to: ‘cities.json’\n",
             "\n",
-            "cities.json.1       100%[===================>]  15.46K  --.-KB/s    in 0s      \n",
+            "\rcities.json           0%[                    ]       0  --.-KB/s               \rcities.json         100%[===================>]  15.46K  --.-KB/s    in 0.001s  \n",
             "\n",
-            "2023-07-02 13:03:45 (35.5 MB/s) - ‘cities.json.1’ saved [15829/15829]\n",
+            "2023-07-02 16:52:51 (30.0 MB/s) - ‘cities.json’ saved [15829/15829]\n",
             "\n"
           ]
         }
@@ -161,7 +209,7 @@
       "metadata": {
         "id": "qj8cYyhKSHBl"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -174,7 +222,7 @@
       "metadata": {
         "id": "uNZs3ShmVCAl"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -264,7 +312,7 @@
       "metadata": {
         "id": "CGJurVstWvbv"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -277,7 +325,7 @@
       "metadata": {
         "id": "WOqkwzTkX1L5"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -370,17 +418,24 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bdfcXzp1kVSA",
-        "outputId": "d07b5f92-0ada-49d8-9710-e816e3c66afb"
+        "outputId": "c652cd05-f951-453d-cf1f-e9ef3ff7e80c"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Requirement already satisfied: python-Levenshtein in /usr/local/lib/python3.10/dist-packages (0.21.1)\n",
-            "Requirement already satisfied: Levenshtein==0.21.1 in /usr/local/lib/python3.10/dist-packages (from python-Levenshtein) (0.21.1)\n",
-            "Requirement already satisfied: rapidfuzz<4.0.0,>=2.3.0 in /usr/local/lib/python3.10/dist-packages (from Levenshtein==0.21.1->python-Levenshtein) (3.1.1)\n",
+            "Collecting python-Levenshtein\n",
+            "  Downloading python_Levenshtein-0.21.1-py3-none-any.whl (9.4 kB)\n",
+            "Collecting Levenshtein==0.21.1 (from python-Levenshtein)\n",
+            "  Downloading Levenshtein-0.21.1-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (172 kB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m172.5/172.5 kB\u001b[0m \u001b[31m4.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hCollecting rapidfuzz<4.0.0,>=2.3.0 (from Levenshtein==0.21.1->python-Levenshtein)\n",
+            "  Downloading rapidfuzz-3.1.1-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (3.1 MB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m3.1/3.1 MB\u001b[0m \u001b[31m37.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hInstalling collected packages: rapidfuzz, Levenshtein, python-Levenshtein\n",
+            "Successfully installed Levenshtein-0.21.1 python-Levenshtein-0.21.1 rapidfuzz-3.1.1\n",
             "Prediction accuracy: 99.2%\n"
           ]
         }
@@ -430,7 +485,7 @@
       "metadata": {
         "id": "uoS_LRqHXCNl"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -449,9 +504,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Da0fAyHq0Q4J",
-        "outputId": "df56c1b7-a8da-4bdc-d642-fbcaf15e7196"
+        "outputId": "f878b0d1-a9b7-4d37-eb39-35461eb68540"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -488,9 +543,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xkN20_DNp7ft",
-        "outputId": "37bf1185-8f5d-41a3-86f3-36481ab33733"
+        "outputId": "0565d0e0-2484-4930-b87b-cb4ef3d5ddc6"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -569,7 +624,7 @@
       "metadata": {
         "id": "EpXKTrpdhTib"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -592,9 +647,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bbP87pfO8Akh",
-        "outputId": "a57068ce-daaf-4eee-92c9-914deb90ad40"
+        "outputId": "a6ec06d9-acfd-4bce-c374-9b02c0f396f1"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -644,9 +699,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5jcEdj7rKeBB",
-        "outputId": "7c139132-9231-4672-9fb0-a60fa561eff5"
+        "outputId": "ed24fe27-738a-4032-992e-f9ad016d1b48"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -683,9 +738,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zu6MY-JB5U27",
-        "outputId": "b00a7019-5f8a-440a-a2d0-07dd4860cb80"
+        "outputId": "ba3fcb76-5884-47ae-feee-15b5aec03cf7"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -753,9 +808,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dqy531KZLw6M",
-        "outputId": "cf1be68e-3a02-4aac-c3d8-2493f8b9c310"
+        "outputId": "6862c7b4-9655-444f-a8ce-a691f55c8694"
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -780,9 +835,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7W5k542m--op",
-        "outputId": "48e3ec39-9c6d-4df3-f857-1e8f4d72f99d"
+        "outputId": "235e1409-bc1b-415f-de13-2711320bee19"
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -819,9 +874,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KU2cu5wFyqm_",
-        "outputId": "fa5e8803-998c-420e-901c-c72571cf54bc"
+        "outputId": "c6da176a-2365-4176-80a8-75feb5cf5183"
       },
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -831,7 +886,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 34
+          "execution_count": 19
         }
       ]
     },
@@ -849,9 +904,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "E6szD_QS9a_z",
-        "outputId": "4d7dd1e2-df87-4a48-a9c2-87f0b8faf83b"
+        "outputId": "7cd33afc-9cf3-4ea9-e4cd-c67f486010ab"
       },
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
@@ -916,39 +971,53 @@
         "    # Add a cumulative sum column\n",
         "    act_routes = act_routes.withColumn('cumulative_payment', Fsum('payment').over(window))\n",
         "\n",
+        "    # Initialize lists to store deposit back amounts and fines\n",
+        "    deposit_back_amounts = []\n",
+        "    fines = []\n",
+        "\n",
         "    # Calculate the number of routes that can be paid\n",
-        "    max_payment = act_routes.filter(act_routes['cumulative_payment'] <= BANK_ACCOUNT_LIMIT).select(Fsum('payment')).first()[0]\n",
+        "    while act_routes.count() > 0:\n",
+        "        max_payment = act_routes.filter(act_routes['cumulative_payment'] <= BANK_ACCOUNT_LIMIT).select(Fsum('payment')).first()[0]\n",
         "\n",
-        "    # Filter the routes that can be paid\n",
-        "    paid_routes = act_routes.filter(act_routes['payment'] <= max_payment)\n",
+        "        # Filter the routes that can be paid\n",
+        "        paid_routes = act_routes.filter(act_routes['payment'] <= max_payment)\n",
         "\n",
-        "    # Calculate the deposit back amount\n",
-        "    deposit_back = BANK_ACCOUNT_LIMIT - max_payment\n",
+        "        # Calculate the deposit back amount\n",
+        "        deposit_back = BANK_ACCOUNT_LIMIT - max_payment\n",
+        "        deposit_back_amounts.append(deposit_back)\n",
         "\n",
-        "    # Calculate the fine amount\n",
-        "    fine = deposit_back * FINE_PERCENTAGE\n",
+        "        # Calculate the fine amount\n",
+        "        fine = deposit_back * FINE_PERCENTAGE\n",
+        "        fines.append(fine)\n",
         "\n",
-        "    return deposit_back, fine, paid_routes\n",
+        "        # Remove paid routes\n",
+        "        act_routes = act_routes.subtract(paid_routes)\n",
+        "\n",
+        "    return deposit_back_amounts, fines, paid_routes\n",
         "\n",
         "# Calculate total payment amount and update the DataFrame with 'payment' column\n",
         "total_payment, acpath_with_similarity = calculate_payment(acpath_with_similarity)\n",
         "\n",
         "# Optimize payment scheme and get deposit back amounts, fine amount, and payment history\n",
-        "deposit_back_amount, fine_amount, paid_routes = optimize_payment(acpath_with_similarity)\n",
+        "deposit_back_amounts, fines, paid_routes = optimize_payment(acpath_with_similarity)\n",
         "\n",
         "# Print the results\n",
         "print(f\"Total payment amount: ${total_payment:.2f}\")\n",
-        "print(f\"Total deposit back amount: ${deposit_back_amount:.2f}\")\n",
-        "print(f\"Total fine amount: ${fine_amount:.2f}\")"
+        "print(f\"Total deposit back amount: ${sum(deposit_back_amounts):.2f}\")\n",
+        "print(f\"Total fine amount: ${sum(fines):.2f}\")\n",
+        "\n",
+        "# Print the fine for each deposit\n",
+        "for i, (deposit, fine) in enumerate(zip(deposit_back_amounts, fines)):\n",
+        "    print(f\"Fine for deposit {i+1}: ${fine:.2f}\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "yOpnIKSiVLce",
-        "outputId": "1837695e-b9c0-4bea-ec59-60e4f0780dc1"
+        "id": "vUdC8z1Ybxi9",
+        "outputId": "3c05a34f-a14a-4369-a973-bdc4cb21866b"
       },
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
@@ -956,7 +1025,8 @@
           "text": [
             "Total payment amount: $13051630.07\n",
             "Total deposit back amount: $120.42\n",
-            "Total fine amount: $6.02\n"
+            "Total fine amount: $6.02\n",
+            "Fine for deposit 1: $6.02\n"
           ]
         }
       ]
